--- a/css/masterletter.css
+++ b/css/masterletter.css
@@ -28,8 +28,9 @@ html{
 
 a{color:var(--fontcolor);
 font-family: 'Montserrat', sans-serif;
-font-size: 0.75em;
-text-decoration: none;}
+font-size: 1.5em;
+text-decoration: none;
+padding-bottom: 1.5em;}
 
 .light{
   color: var(--colorlight);
@@ -37,7 +38,7 @@ text-decoration: none;}
 
 header{
   display:flex;
-  margin-bottom: 5vh;
+  margin-bottom: 3vh;
   margin-top: 10px;
   padding-top: 2px;}
 
@@ -111,7 +112,7 @@ h1{
 
 p{color:var(--fontcolor);
 font-family: 'Montserrat', sans-serif;
-font-size: 0.75em;}
+font-size: 1.5em;}
 
 
 
