--- a/css/master.css
+++ b/css/master.css
@@ -56,8 +56,7 @@ body{
   width:50px;
   top:25px;
   right:25px;
-  fill:"black";
-  stroke:black;
+
 }
 
 .ml-logo{
@@ -83,7 +82,7 @@ p{margin-bottom: 1rem;
     font-size: 1em;
 }
 
-h2, h3, h4, h5{
+h2{
   font-family: marvin,sans-serif ;
   font-size: 3rem;
 }
@@ -103,71 +102,21 @@ h1{
 
 }
 
-
-.menu-toggle{
-  margin-top: 1em;
-  margin-left: 1em;
-}
-
-
-
- .main-menu {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left : -300px;
-  height: 10%;
-  transition: all 1s cubic-bezier(0, 0.55, 0.45, 1);
-  z-index: 999;
+h3{
+  font-family: marvin,sans-serif ;
+  font-size: 1rem;
 
 }
 
-.main-menu .menu-close {
-  position: absolute;
-  right: 0;
-  top: 0;
-  border-bottom: 0.5px solid transparent;
-        }
-
-.main-menu ul {
-  min-height: 100%;
-  width: 300px;
-  background: var(--color2);
-  margin: 0;
-  padding: 5em 0 0;
+.footer-texte{
+  display:flex;
+  padding-top: 7vh;
+  padding-bottom: 7vh;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
-.main-menu a {
-  font-family: 'Montserrat', sans-serif;
-  display: block;
-  padding: .75em 15px;
-  line-height: 1em;
-  font-size: 1.5em;
-  color: var(--fontcolor);
-  text-decoration: none;
-  border-bottom: 0.5px solid lightsalmon;
 
-}
-
-.main-menu:target{
-  left: 0;
-}
-
-.main-menu:target .menu-close {
-  z-index: 1001;
-}
-
-.main-menu:target + .backdrop {
-  position: absolute;
-  display: block;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 998;
-  background: #FFF7EC;
-  cursor: default;
-}
 
 
  .goback{
