--- a/css/masterletter.css
+++ b/css/masterletter.css
@@ -56,8 +56,7 @@ header{
   height:50px;
   width:50px;
   top:1px;
-  fill:"black";
-  stroke:black;
+  
 
 }
 
@@ -118,11 +117,12 @@ font-size: 1.5em;}
 
 .lettre{
   width: 40vw;
-  margin-left: 10vh;
+  margin-left: 10vw;
 }
 .illu svg{
   width: 40vw;
   height: 450px;
+  margin-right: 5vw;
 }
 
 footer{
